# car_repair_management

./: README.md  pyproject.toml
car_repair_management/: hooks.py  modules.txt
car_repair_management/car_repair_management/custom/: employee.json  item.json  item_barcode.json  packed_item.json  quotation.json  sales_invoice.json  sales_invoice_item.json
car_repair_management/car_repair_management/dashboard_chart/car_repair_chart/: car_repair_chart.json
car_repair_management/car_repair_management/doctype/car_diagnosis/: car_diagnosis.js  car_diagnosis.json  car_diagnosis.py  test_car_diagnosis.py
car_repair_management/car_repair_management/doctype/car_info/: car_info.js  car_info.json  car_info.py  test_car_info.py
car_repair_management/car_repair_management/doctype/car_info_multi/: car_info_multi.json  car_info_multi.py
car_repair_management/car_repair_management/doctype/car_list_item/: car_list_item.json  car_list_item.py
car_repair_management/car_repair_management/doctype/car_photos/: car_photos.json  car_photos.py
car_repair_management/car_repair_management/doctype/car_repair/: car_repair.js  car_repair.json  car_repair.py  test_car_repair.py
car_repair_management/car_repair_management/doctype/service_item_checklist/: service_item_checklist.json  service_item_checklist.py
car_repair_management/car_repair_management/doctype/service_type/: service_type.js  service_type.json  service_type.py  test_service_type.py
car_repair_management/config/: desktop.py  docs.py
car_repair_management/fixtures/: workflow.json
(+10 files in other folders)
