[project]
name = "car_repair_management"
authors = [
    { name = "Ketan Patel", email = "contact@solufy.in"}
]
description = "Car and Vehicle Repair management ERPNext apps provide complete solution for Automotive service workshop management for fleet-Vehicle."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
